crates/nrz-lib/src/snapshots/nrz_lib__opts__test__force.snap
---
source: crates/nrz-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: false,
            write: true,
        },
        remote: CacheActions {
            read: false,
            write: true,
        },
    },
)
