crates/nrz-lib/src/snapshots/nrz_lib__opts__test__no-cache.snap
---
source: crates/nrz-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: true,
            write: false,
        },
        remote: CacheActions {
            read: true,
            write: false,
        },
    },
)
