crates/nrz-lib/src/snapshots/nrz_lib__opts__test__no-cache_remote_w,local_rw.snap
---
source: crates/nrz-lib/src/opts.rs
expression: cache_config
---
Err(
    Opts(
        OverlappingCacheOptions,
    ),
)
