crates/nrz-lib/src/snapshots/nrz_lib__opts__test__nrz_watch_build.snap
---
source: crates/nrz-lib/src/opts.rs
expression: "json!({\n    \"tasks\": opts.run_opts.tasks, \"filter_patterns\":\n    opts.scope_opts.filter_patterns\n})"
---
{
  "tasks": [
    "build"
  ],
  "filter_patterns": []
}
