crates/nrz-lib/src/snapshots/nrz_lib__opts__test__remote-cache-read-only.snap
---
source: crates/nrz-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: true,
            write: true,
        },
        remote: CacheActions {
            read: true,
            write: false,
        },
    },
)
